--- a/index.html
+++ b/index.html
@@ -4,45 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koustav Chowdhury</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; }
-        header { text-align: center; margin-bottom: 20px; }
-        .section { margin-bottom: 40px; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Koustav Chowdhury</h1>
         <p>Undergraduate Student | Indian Statistical Institute</p>
     </header>
-    <section class="section">
-        <h2>About Me</h2>
-        <p>I am an aspiring statistician interested in machine learning, nonparametric statistics, and applications in fields like epidemiology.</p>
-    </section>
-    <section class="section">
-        <h2>CV</h2>
-        <p><a href="path/to/your-cv.pdf" target="_blank">Download my CV</a></p>
-    </section>
-    <section class="section">
-        <h2>Published Papers</h2>
+    <nav>
         <ul>
-            <li>No published papers yet</li>
+            <li><a href="index.html">Profile</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="achievements.html">Achievements</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-    </section>
-    <section class="section">
-        <h2>Projects</h2>
-        <ul>
-            <li>Project 1: Robust Clustering Using Median of Means Estimator</li>
-            <li>Project 2: Time Series Analysis of Sector-wise GDP in India</li>
-        </ul>
-    </section>
-    <section class="section">
-        <h2>Achievements</h2>
-        <ul>
-            <li>KVPY Fellowship (SA AIR: 443; SX AIR: 437)</li>
-            <li>NTSE Stage-I (Rank: 43)</li>
-            <li>JEE Mains (AIR: 369)</li>
-        </ul>
-    </section>
+    </nav>
+    <div class="container">
+        <h2>Welcome!</h2>
+        <p>This is the homepage for Koustav Chowdhury. Use the navigation bar above to explore my profile, projects, and more!</p>
+    </div>
+    <footer>
+        <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
+    </footer>
 </body>
 </html>
