--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
         </ul>
     </nav>
     <div class="container">
-        <h2>Welcome!</h2>
-        <p>This is the homepage for Koustav Chowdhury. Use the navigation bar above to explore my profile, projects, and more!</p>
+        <div class="profile-section">
+            <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
+            <h2>About Me</h2>
+            <p>
+                I am an aspiring statistician interested in Machine Learning, Nonparametric Statistics, 
+                and applications in fields like epidemiology. I am currently a third-year undergraduate 
+                student at the Indian Statistical Institute, Kolkata.
+            </p>
+        </div>
     </div>
     <footer>
         <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
