--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 </head>
 <body>
     <header>
-        <h1>Koustav Chowdhury</h1>
-        <p>Undergraduate Student | Indian Statistical Institute</p>
+        <div class="header-container">
+            <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
+            <div class="header-text">
+                <h1>Koustav Chowdhury</h1>
+                <p>Undergraduate Student | Indian Statistical Institute</p>
+            </div>
+        </div>
     </header>
     <nav>
-        <ul>
+        <ul class="nav-bar">
             <li><a href="index.html">Profile</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -20,17 +25,16 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="container">
-        <div class="profile-section">
-            <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
+    <main>
+        <section>
             <h2>About Me</h2>
             <p>
-                I am an aspiring statistician interested in Machine Learning, Nonparametric Statistics, 
-                and applications in fields like epidemiology. I am currently a third-year undergraduate 
+                I am an aspiring statistician with interests in Machine Learning, Nonparametric Statistics, 
+                and their applications in fields like epidemiology. I am currently a third-year undergraduate 
                 student at the Indian Statistical Institute, Kolkata.
             </p>
-        </div>
-    </div>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
     </footer>
