--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <h1>Contact Me</h1>
     </header>
     <nav>
-        <ul>
+        <ul class="nav-bar">
             <li><a href="index.html">Profile</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -19,25 +19,21 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="container">
-        <h2>Get in Touch</h2>
-        <p>You can reach me at:</p>
-        <ul>
-            <li>Email: <a href="mailto:koustavchowdhury2003@gmail.com">koustavchowdhury2003@gmail.com</a></li>
-            <li>Phone: +91 7477577492</li>
-            <li>GitHub: <a href="https://github.com/Koustav-Chowdhury73" target="_blank">Koustav-Chowdhury73</a></li>
-        </ul>
-        <h3>Send Me a Message</h3>
-        <form action="mailto:koustavchowdhury2003@gmail.com" method="post" enctype="text/plain">
-            <label for="name">Your Name:</label>
-            <input type="text" id="name" name="name" required><br><br>
-            <label for="email">Your Email:</label>
-            <input type="email" id="email" name="email" required><br><br>
-            <label for="message">Your Message:</label><br>
-            <textarea id="message" name="message" rows="5" required></textarea><br><br>
-            <button type="submit">Send</button>
-        </form>
-    </div>
+    <main>
+        <section>
+            <h2>Get in Touch</h2>
+            <p>Email: <a href="mailto:koustavchowdhury2003@gmail.com">koustavchowdhury2003@gmail.com</a></p>
+            <p>Phone: +91 7477577492</p>
+            <p>GitHub: <a href="https://github.com/Koustav-Chowdhury73" target="_blank">Koustav-Chowdhury73</a></p>
+            <h3>Send Me a Message</h3>
+            <form action="mailto:koustavchowdhury2003@gmail.com" method="post" enctype="text/plain">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
     </footer>
