--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koustav Chowdhury</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="header-container">
+    <header class="hero">
+        <div class="hero-content">
             <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
-            <div class="header-text">
-                <h1>Koustav Chowdhury</h1>
-                <p>Undergraduate Student | Indian Statistical Institute</p>
-            </div>
+            <h1>Koustav Chowdhury</h1>
+            <p>Undergraduate Student | Indian Statistical Institute</p>
         </div>
     </header>
-    <nav>
-        <ul class="nav-bar">
-            <li><a href="index.html">Profile</a></li>
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="achievements.html">Achievements</a></li>
@@ -26,11 +25,11 @@
         </ul>
     </nav>
     <main>
-        <section>
+        <section class="about">
             <h2>About Me</h2>
             <p>
                 I am an aspiring statistician with interests in Machine Learning, Nonparametric Statistics, 
-                and their applications in fields like epidemiology. I am currently a third-year undergraduate 
+                and applications in fields like epidemiology. I am currently a third-year undergraduate 
                 student at the Indian Statistical Institute, Kolkata.
             </p>
         </section>
