--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="publications.html">Publications</a></li>
+            <li><a href="research.html">Research</a></li>
             <li><a href="achievements.html">Achievements</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
