--- a/achievements.html
+++ b/achievements.html
@@ -3,30 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Achievements - Koustav Chowdhury</title>
+    <title>Achievements | Koustav Chowdhury</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Achievements</h1>
+    <header class="hero">
+        <div class="hero-content">
+            <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
+            <h1>Koustav Chowdhury</h1>
+            <p>Achievements</p>
+        </div>
     </header>
-    <nav>
+    <nav class="navbar">
         <ul>
-            <li><a href="index.html">Profile</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="publications.html">Publications</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="research.html">Research</a></li>
             <li><a href="achievements.html">Achievements</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="container">
-        <h2>Achievements and Scholarships</h2>
-        <ul>
-            <li>KVPY Fellowship (SA AIR: 443; SX AIR: 437)</li>
-            <li>NTSE Stage-I (Rank: 43)</li>
-            <li>JEE Mains (AIR: 369)</li>
-        </ul>
-    </div>
+    <main>
+        <section class="achievements">
+            <h2>Achievements</h2>
+            <ul>
+                <li>2025: Best Undergraduate Research Presentation - ISI Kolkata</li>
+                <li>2024: Published Paper in Machine Learning Journal</li>
+                <li>2023: First Runner-up - National Statistics Quiz</li>
+            </ul>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
     </footer>
