--- a/contact.html
+++ b/contact.html
@@ -3,33 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Koustav Chowdhury</title>
+    <title>Contact | Koustav Chowdhury</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Contact Me</h1>
+    <header class="hero">
+        <div class="hero-content">
+            <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
+            <h1>Koustav Chowdhury</h1>
+            <p>Contact Information</p>
+        </div>
     </header>
-    <nav>
-        <ul class="nav-bar">
-            <li><a href="index.html">Profile</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="publications.html">Publications</a></li>
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="research.html">Research</a></li>
             <li><a href="achievements.html">Achievements</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
-        <section>
+        <section class="contact">
             <h2>Get in Touch</h2>
-            <p>Email: <a href="mailto:koustavchowdhury2003@gmail.com">koustavchowdhury2003@gmail.com</a></p>
-            <p>Phone: +91 7477577492</p>
-            <p>GitHub: <a href="https://github.com/Koustav-Chowdhury73" target="_blank">Koustav-Chowdhury73</a></p>
-            <h3>Send Me a Message</h3>
-            <form action="mailto:koustavchowdhury2003@gmail.com" method="post" enctype="text/plain">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+            <p>If you have any questions or would like to collaborate, feel free to reach out to me:</p>
+
+            <ul>
+                <li>Email: <a href="mailto:koustav@example.com">koustav@example.com</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/koustav-chowdhury" target="_blank">Koustav Chowdhury</a></li>
+                <li>GitHub: <a href="https://github.com/koustav-chowdhury" target="_blank">koustav-chowdhury</a></li>
+            </ul>
+
+            <h3>Contact Form</h3>
+            <form action="https://formspree.io/f/your-form-id" method="POST">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required></textarea>
+
                 <button type="submit">Send Message</button>
             </form>
         </section>
