--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <header class="hero">
         <div class="hero-content">
             <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
-            <h1>Koustav Chowdhury</h1>
-            <p>Undergraduate Student | Indian Statistical Institute</p>
+            <div class="hero-text">
+                <h1>Koustav Chowdhury</h1>
+                <p>Undergraduate Student | Indian Statistical Institute</p>
+            </div>
         </div>
     </header>
     <nav class="navbar">
