--- a/research.html
+++ b/research.html
@@ -3,17 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research | Koustav Chowdhury</title>
+    <title>Research - Koustav Chowdhury</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="hero">
-        <div class="hero-content">
-            <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
-            <h1>Koustav Chowdhury</h1>
-            <p>Research Interests</p>
-        </div>
-    </header>
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -24,17 +18,10 @@
     </nav>
     <main>
         <section class="research">
-            <h2>Research Interests</h2>
+            <h2>My Research</h2>
             <p>
-                I focus on the intersection of Machine Learning, Nonparametric Statistics, and their applications in epidemiology. 
-                My research projects have involved exploring various algorithms, statistical models, and techniques in these areas.
+                This is where I'll describe my research interests, projects, and areas of exploration in depth.
             </p>
-
-            <h3>Current Projects</h3>
-            <ul>
-                <li>Project 1: Statistical Modeling in Epidemiology</li>
-                <li>Project 2: Machine Learning in Predictive Modeling</li>
-            </ul>
         </section>
     </main>
     <footer>
