--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="home">
     <header class="hero">
         <div class="hero-content">
             <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
-            <div class="hero-text">
-                <h1>Koustav Chowdhury</h1>
-                <p>Undergraduate Student | Indian Statistical Institute</p>
-            </div>
+            <h1>Koustav Chowdhury</h1>
+            <p>Undergraduate Student | Indian Statistical Institute</p>
         </div>
     </header>
     <nav class="navbar">
