--- a/contact.html
+++ b/contact.html
@@ -3,17 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Koustav Chowdhury</title>
+    <title>Contact - Koustav Chowdhury</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="hero">
-        <div class="hero-content">
-            <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
-            <h1>Koustav Chowdhury</h1>
-            <p>Contact Information</p>
-        </div>
-    </header>
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -24,28 +18,10 @@
     </nav>
     <main>
         <section class="contact">
-            <h2>Get in Touch</h2>
-            <p>If you have any questions or would like to collaborate, feel free to reach out to me:</p>
-
-            <ul>
-                <li>Email: <a href="mailto:koustav@example.com">koustav@example.com</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/koustav-chowdhury" target="_blank">Koustav Chowdhury</a></li>
-                <li>GitHub: <a href="https://github.com/koustav-chowdhury" target="_blank">koustav-chowdhury</a></li>
-            </ul>
-
-            <h3>Contact Form</h3>
-            <form action="https://formspree.io/f/your-form-id" method="POST">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required></textarea>
-
-                <button type="submit">Send Message</button>
-            </form>
+            <h2>Contact Me</h2>
+            <p>
+                You can reach me via email at <strong>koustav@example.com</strong> or through my LinkedIn profile.
+            </p>
         </section>
     </main>
     <footer>
