--- a/achievements.html
+++ b/achievements.html
@@ -3,17 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Achievements | Koustav Chowdhury</title>
+    <title>Achievements - Koustav Chowdhury</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="hero">
-        <div class="hero-content">
-            <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
-            <h1>Koustav Chowdhury</h1>
-            <p>Achievements</p>
-        </div>
-    </header>
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -24,12 +18,10 @@
     </nav>
     <main>
         <section class="achievements">
-            <h2>Achievements</h2>
-            <ul>
-                <li>2025: Best Undergraduate Research Presentation - ISI Kolkata</li>
-                <li>2024: Published Paper in Machine Learning Journal</li>
-                <li>2023: First Runner-up - National Statistics Quiz</li>
-            </ul>
+            <h2>My Achievements</h2>
+            <p>
+                Here are some of the accomplishments and recognition I've received over the years.
+            </p>
         </section>
     </main>
     <footer>
