--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body class="home">
     <header class="hero">
-        <div class="hero-content">
+        <div class="hero-content hero-flex">
             <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
-            <h1>Koustav Chowdhury</h1>
-            <p>Undergraduate Student | Indian Statistical Institute</p>
+            <div class="text-content">
+                <h1>Koustav Chowdhury</h1>
+                <p>Undergraduate Student | Indian Statistical Institute</p>
+            </div>
         </div>
     </header>
     <nav class="navbar">
