--- a/research.html
+++ b/research.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research - Koustav Chowdhury</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Research – Koustav Chowdhury</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <li><a href="achievements.html">Achievements</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section class="research">
-            <h2>My Research</h2>
-            <p>
-                This is where I'll describe my research interests, projects, and areas of exploration in depth.
-            </p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
-    </footer>
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Koustav Chowdhury</h1>
+      <p>Undergraduate Student | Indian Statistical Institute</p>
+    </div>
+  </header>
+
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="research.html">Research</a></li>
+      <li><a href="achievements.html">Achievements</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section>
+      <h2>Research Interests</h2>
+      <p>
+        My academic interests lie in areas such as Machine Learning, Nonparametric Statistics,
+        Causal Inference, and Biostatistics. I am particularly enthusiastic about applying 
+        rigorous statistical methods to real-world problems in public health and the social sciences.
+      </p>
+
+      <h2>Projects</h2>
+      <ul>
+        <li><strong>Project Title 1:</strong> Brief description of the project and your contributions.</li>
+        <li><strong>Project Title 2:</strong> Another interesting project you’ve worked on.</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
+  </footer>
 </body>
 </html>
