--- a/achievements.html
+++ b/achievements.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Achievements - Koustav Chowdhury</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Achievements – Koustav Chowdhury</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <li><a href="achievements.html">Achievements</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section class="achievements">
-            <h2>My Achievements</h2>
-            <p>
-                Here are some of the accomplishments and recognition I've received over the years.
-            </p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
-    </footer>
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Koustav Chowdhury</h1>
+      <p>Undergraduate Student | Indian Statistical Institute</p>
+    </div>
+  </header>
+
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="research.html">Research</a></li>
+      <li><a href="achievements.html">Achievements</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section>
+      <h2>Achievements</h2>
+      <ul>
+        <li>Awarded XYZ Scholarship for academic excellence.</li>
+        <li>Secured top 1% rank in National Level Math Olympiad.</li>
+        <li>Selected for ABC Research Fellowship.</li>
+        <li>Presented paper at DEF Conference 2024.</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
+  </footer>
 </body>
 </html>
