--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Koustav Chowdhury</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact – Koustav Chowdhury</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <li><a href="achievements.html">Achievements</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section class="contact">
-            <h2>Contact Me</h2>
-            <p>
-                You can reach me via email at <strong>koustav@example.com</strong> or through my LinkedIn profile.
-            </p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
-    </footer>
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Koustav Chowdhury</h1>
+      <p>Undergraduate Student | Indian Statistical Institute</p>
+    </div>
+  </header>
+
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="research.html">Research</a></li>
+      <li><a href="achievements.html">Achievements</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section>
+      <h2>Contact Me</h2>
+      <p>Email: <a href="mailto:koustav@email.com">koustav@email.com</a></p>
+      <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/yourlinkedin" target="_blank">linkedin.com/in/yourlinkedin</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
+  </footer>
 </body>
 </html>
