--- a/index.html
+++ b/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Koustav Chowdhury</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Koustav Chowdhury</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="home">
-  <header class="hero">
-    <div class="hero-content">
-      <h1>Koustav Chowdhury</h1>
-      <p>Undergraduate Student | Indian Statistical Institute</p>
-    </div>
-  </header>
+<body>
+    <header class="hero">
+        <div class="hero-content">
+            <h1>Koustav Chowdhury</h1>
+            <p>Undergraduate Student | Indian Statistical Institute</p>
+        </div>
+    </header>
 
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="research.html">Research</a></li>
-      <li><a href="achievements.html">Achievements</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="research.html">Research</a></li>
+            <li><a href="achievements.html">Achievements</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="cv.pdf" class="download-cv" download>Download CV</a></li>
+        </ul>
+    </nav>
 
-  <main>
-    <section class="about">
-      <h2>About Me</h2>
-      <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo about-photo"/>
-      <p>
-        I am an aspiring statistician with interests in Machine Learning, Nonparametric Statistics,
-        and applications in fields like epidemiology. I am currently a third-year undergraduate
-        student at the Indian Statistical Institute, Kolkata.
-      </p>
-    </section>
-  </main>
+    <main>
+        <section class="about-wrapper">
+            <img src="profile.jpg" alt="Koustav Chowdhury" class="profile-photo">
+            <div class="about">
+                <h2>About Me</h2>
+                <p>
+                    I am an aspiring statistician with interests in Machine Learning, Nonparametric Statistics, 
+                    and applications in fields like epidemiology. I am currently a third-year undergraduate 
+                    student at the Indian Statistical Institute, Kolkata.
+                </p>
+            </div>
+        </section>
+    </main>
 
-  <footer>
-    <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
-  </footer>
+    <footer>
+        <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
+    </footer>
 </body>
 </html>
