--- a/research.html
+++ b/research.html
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Research – Koustav Chowdhury</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Research | Koustav Chowdhury</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="hero">
-    <div class="hero-content">
-      <h1>Koustav Chowdhury</h1>
-      <p>Undergraduate Student | Indian Statistical Institute</p>
-    </div>
-  </header>
+    <header class="navbar">
+        <h1 class="site-title">Koustav Chowdhury</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="research.html">Research</a></li>
+                <li><a href="achievements.html">Achievements</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/cv.pdf" download>CV</a></li>
+                <li><a href="https://scholar.google.com" target="_blank">Google Scholar</a></li>
+                <li><a href="https://github.com" target="_blank">GitHub</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="research.html">Research</a></li>
-      <li><a href="achievements.html">Achievements</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+    <main>
+        <section class="research-section">
+            <h2>Research</h2>
+            <p>My research focuses on machine learning and statistics, specifically in areas like algorithms, theory, and practical applications. Below are some of the research projects I’ve been involved with:</p>
+            <ul>
+                <li>Machine Learning Algorithms for Data Science</li>
+                <li>Bayesian Statistics and Inference</li>
+                <li>Applications of Machine Learning in Synthetic Biology</li>
+            </ul>
+        </section>
+    </main>
 
-  <main>
-    <section>
-      <h2>Research Interests</h2>
-      <p>
-        My academic interests lie in areas such as Machine Learning, Nonparametric Statistics,
-        Causal Inference, and Biostatistics. I am particularly enthusiastic about applying 
-        rigorous statistical methods to real-world problems in public health and the social sciences.
-      </p>
-
-      <h2>Projects</h2>
-      <ul>
-        <li><strong>Project Title 1:</strong> Brief description of the project and your contributions.</li>
-        <li><strong>Project Title 2:</strong> Another interesting project you’ve worked on.</li>
-      </ul>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
-  </footer>
+    <footer>
+        <p>&copy; 2025 Koustav Chowdhury</p>
+    </footer>
 </body>
 </html>
