--- a/achievements.html
+++ b/achievements.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Achievements – Koustav Chowdhury</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Achievements | Koustav Chowdhury</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="hero">
-    <div class="hero-content">
-      <h1>Koustav Chowdhury</h1>
-      <p>Undergraduate Student | Indian Statistical Institute</p>
-    </div>
-  </header>
+    <header class="navbar">
+        <h1 class="site-title">Koustav Chowdhury</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="research.html">Research</a></li>
+                <li><a href="achievements.html">Achievements</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/cv.pdf" download>CV</a></li>
+                <li><a href="https://scholar.google.com" target="_blank">Google Scholar</a></li>
+                <li><a href="https://github.com" target="_blank">GitHub</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="research.html">Research</a></li>
-      <li><a href="achievements.html">Achievements</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+    <main>
+        <section class="achievements-section">
+            <h2>Achievements</h2>
+            <p>Here are some of my notable academic and professional achievements:</p>
+            <ul>
+                <li>Visiting Research Scholar, Carnegie Mellon University</li>
+                <li>Research Fellow, Indian Institute of Science (IISc)</li>
+                <li>Member, Machine Learning Cohort, Big Data Summer Institute, University of Michigan</li>
+                <li>Recipient, ISI Kolkata B.Stat Degree</li>
+            </ul>
+        </section>
+    </main>
 
-  <main>
-    <section>
-      <h2>Achievements</h2>
-      <ul>
-        <li>Awarded XYZ Scholarship for academic excellence.</li>
-        <li>Secured top 1% rank in National Level Math Olympiad.</li>
-        <li>Selected for ABC Research Fellowship.</li>
-        <li>Presented paper at DEF Conference 2024.</li>
-      </ul>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
-  </footer>
+    <footer>
+        <p>&copy; 2025 Koustav Chowdhury</p>
+    </footer>
 </body>
 </html>
