--- a/contact.html
+++ b/contact.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact – Koustav Chowdhury</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact | Koustav Chowdhury</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="hero">
-    <div class="hero-content">
-      <h1>Koustav Chowdhury</h1>
-      <p>Undergraduate Student | Indian Statistical Institute</p>
-    </div>
-  </header>
+    <header class="navbar">
+        <h1 class="site-title">Koustav Chowdhury</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="research.html">Research</a></li>
+                <li><a href="achievements.html">Achievements</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/cv.pdf" download>CV</a></li>
+                <li><a href="https://scholar.google.com" target="_blank">Google Scholar</a></li>
+                <li><a href="https://github.com" target="_blank">GitHub</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="research.html">Research</a></li>
-      <li><a href="achievements.html">Achievements</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+    <main>
+        <section class="contact-section">
+            <h2>Contact</h2>
+            <p>You can reach me at:</p>
+            <ul>
+                <li>Email: <a href="mailto:koustav@example.com">koustav@example.com</a></li>
+                <li>GitHub: <a href="https://github.com/koustav" target="_blank">github.com/koustav</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/koustav" target="_blank">linkedin.com/in/koustav</a></li>
+            </ul>
+        </section>
+    </main>
 
-  <main>
-    <section>
-      <h2>Contact Me</h2>
-      <p>Email: <a href="mailto:koustav@email.com">koustav@email.com</a></p>
-      <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/yourlinkedin" target="_blank">linkedin.com/in/yourlinkedin</a></p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Koustav Chowdhury. All rights reserved.</p>
-  </footer>
+    <footer>
+        <p>&copy; 2025 Koustav Chowdhury</p>
+    </footer>
 </body>
 </html>
