--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <main>
         <section class="about-section">
             <div class="about-photo">
-                <img src="profile.png" alt="Profile Photo">
+                <!-- Updated URL to point to the raw profile.jpg in your GitHub repository -->
+                <img src="https://raw.githubusercontent.com/koustav/koustav.github.io/main/profile.jpg" alt="Profile Photo">
             </div>
             <div class="about-text">
                 <h2>About Me</h2>
