--- a/research.html
+++ b/research.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research | Koustav Chowdhury</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navbar">
@@ -15,7 +16,7 @@
                 <li><a href="research.html">Research</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="/cv.pdf" download>CV</a></li>
+                <li><a href="https://raw.githubusercontent.com/koustav/koustav.github.io/main/cv.pdf" download>CV</a></li>
                 <li><a href="https://scholar.google.com" target="_blank">Google Scholar</a></li>
                 <li><a href="https://github.com" target="_blank">GitHub</a></li>
             </ul>
@@ -24,13 +25,8 @@
 
     <main>
         <section class="research-section">
-            <h2>Research</h2>
-            <p>My research focuses on machine learning and statistics, specifically in areas like algorithms, theory, and practical applications. Below are some of the research projects I’ve been involved with:</p>
-            <ul>
-                <li>Machine Learning Algorithms for Data Science</li>
-                <li>Bayesian Statistics and Inference</li>
-                <li>Applications of Machine Learning in Synthetic Biology</li>
-            </ul>
+            <h2>Research Interests</h2>
+            <p>My research spans various areas in statistics and machine learning, particularly focusing on algorithms, theory, and practical applications. Currently, I am involved in projects related to data analysis, statistical modeling, and machine learning algorithm development.</p>
         </section>
     </main>
 
