--- a/achievements.html
+++ b/achievements.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Achievements | Koustav Chowdhury</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navbar">
@@ -15,7 +16,7 @@
                 <li><a href="research.html">Research</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="/cv.pdf" download>CV</a></li>
+                <li><a href="https://raw.githubusercontent.com/koustav/koustav.github.io/main/cv.pdf" download>CV</a></li>
                 <li><a href="https://scholar.google.com" target="_blank">Google Scholar</a></li>
                 <li><a href="https://github.com" target="_blank">GitHub</a></li>
             </ul>
@@ -25,12 +26,10 @@
     <main>
         <section class="achievements-section">
             <h2>Achievements</h2>
-            <p>Here are some of my notable academic and professional achievements:</p>
             <ul>
-                <li>Visiting Research Scholar, Carnegie Mellon University</li>
-                <li>Research Fellow, Indian Institute of Science (IISc)</li>
-                <li>Member, Machine Learning Cohort, Big Data Summer Institute, University of Michigan</li>
-                <li>Recipient, ISI Kolkata B.Stat Degree</li>
+                <li>Visiting Research Scholar, Carnegie Mellon University, Summer 2024</li>
+                <li>Research Fellow, Indian Institute of Science (IISc), Bangalore, Summer 2022</li>
+                <li>Worked with Professors Subhajit Dutta and Nikhil R. Pal</li>
             </ul>
         </section>
     </main>
