--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Koustav Chowdhury</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="navbar">
@@ -15,7 +16,7 @@
                 <li><a href="research.html">Research</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="/cv.pdf" download>CV</a></li>
+                <li><a href="https://raw.githubusercontent.com/koustav/koustav.github.io/main/cv.pdf" download>CV</a></li>
                 <li><a href="https://scholar.google.com" target="_blank">Google Scholar</a></li>
                 <li><a href="https://github.com" target="_blank">GitHub</a></li>
             </ul>
@@ -24,13 +25,8 @@
 
     <main>
         <section class="contact-section">
-            <h2>Contact</h2>
-            <p>You can reach me at:</p>
-            <ul>
-                <li>Email: <a href="mailto:koustav@example.com">koustav@example.com</a></li>
-                <li>GitHub: <a href="https://github.com/koustav" target="_blank">github.com/koustav</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/koustav" target="_blank">linkedin.com/in/koustav</a></li>
-            </ul>
+            <h2>Contact Information</h2>
+            <p>You can contact me via email at <strong>koustav@example.com</strong></p>
         </section>
     </main>
 
