--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="research.html">Research</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="https://raw.githubusercontent.com/koustav/koustav.github.io/main/cv.pdf" download>CV</a></li>
+                <li><a href="https://raw.githubusercontent.com/Koustav-Chowdhury73/koustav.github.io/main/cv.pdf" download>CV</a></li>
                 <li><a href="https://scholar.google.com" target="_blank">Google Scholar</a></li>
                 <li><a href="https://github.com" target="_blank">GitHub</a></li>
             </ul>
@@ -26,7 +26,7 @@
     <main>
         <section class="about-section">
             <div class="about-photo">
-                <img src="https://raw.githubusercontent.com/koustav/koustav.github.io/main/profile.jpg" alt="Profile Photo">
+                <img src="https://raw.githubusercontent.com/Koustav-Chowdhury73/koustav.github.io/main/profile.jpg" alt="Profile Photo">
             </div>
             <div class="about-text">
                 <h2>About Me</h2>
