--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="https://raw.githubusercontent.com/Koustav-Chowdhury73/koustav.github.io/main/cv.pdf" download>CV</a></li>
                 <li><a href="https://scholar.google.com" target="_blank">Google Scholar</a></li>
-                <li><a href="https://github.com" target="_blank">GitHub</a></li>
+                <li><a href="https://github.com/Koustav-Chowdhury73" target="_blank">GitHub</a></li>
             </ul>
         </nav>
     </header>
