--- a/research.html
+++ b/research.html
@@ -16,18 +16,16 @@
                 <li><a href="research.html">Research</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="https://raw.githubusercontent.com/Koustav-Chowdhury73/koustav.github.io/main/cv.pdf" download>CV</a></li>
+                <li><a href="cv.pdf" download>CV</a></li>
                 <li><a href="https://scholar.google.com" target="_blank">Google Scholar</a></li>
                 <li><a href="https://github.com/Koustav-Chowdhury73" target="_blank">GitHub</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <section class="research-section">
-            <h2>Research Interests</h2>
-            <p>My research spans various areas in statistics and machine learning, particularly focusing on algorithms, theory, and practical applications. Currently, I am involved in projects related to data analysis, statistical modeling, and machine learning algorithm development.</p>
-        </section>
+    <main style="padding: 40px 5%;">
+        <h2>Research</h2>
+        <p>Coming soon: a detailed list of my research projects, papers, and presentations.</p>
     </main>
 
     <footer>
