--- a/research.html
+++ b/research.html
@@ -23,9 +23,11 @@
         </nav>
     </header>
 
-    <main style="padding: 40px 5%;">
-        <h2>Research</h2>
-        <p>Coming soon: a detailed list of my research projects, papers, and presentations.</p>
+    <main>
+        <div class="page-container">
+            <h2>Research</h2>
+            <p>Coming soon: a detailed list of my research projects, papers, and presentations.</p>
+        </div>
     </main>
 
     <footer>
