--- a/achievements.html
+++ b/achievements.html
@@ -23,9 +23,11 @@
         </nav>
     </header>
 
-    <main style="padding: 40px 5%;">
-        <h2>Achievements</h2>
-        <p>Coming soon: highlights of awards, scholarships, and competitive milestones.</p>
+    <main>
+        <div class="page-container">
+            <h2>Achievements</h2>
+            <p>Coming soon: highlights of awards, scholarships, and competitive milestones.</p>
+        </div>
     </main>
 
     <footer>
