--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@ C, Python, LaTeX, MATLAB, MS Office, and G-Suite.</div>
                 <img src="profile.jpg" alt="Profile Photo">
             </div>
         </section>
+        <section class="section">
+    <h2>Education</h2>
+    <ul>
+        <li><strong>Bachelor of Statistics (B.Stat)</strong> — Indian Statistical Institute, Kolkata (2022–Present)</li>
+        <li><strong>Higher Secondary</strong> — Jenkins School, Cooch Behar, 2021-2022</li>
+    </ul>
+</section>
+
+<section class="section">
+    <h2>Latest News</h2>
+    <ul>
+        <li><strong>May 2024:</strong> Incoming Research Intern at BDSY organised by Yale School of Public Health.</li>
+    </ul>
+</section>
+
     </main>
 
     <footer>
