--- a/research.html
+++ b/research.html
@@ -25,8 +25,20 @@
 
     <main>
         <div class="page-container">
-            <h2>Research</h2>
-            <p>Coming soon: a detailed list of my research projects, papers, and presentations.</p>
+            <h2>Research Projects</h2>
+        <ul>
+            <li><b>Robust Clustering Using Median of Means Estimator</b>: Developing a clustering algorithm fused with the Median of Means estimator. Guide: Prof. Swagatam Das.</li>
+            <li><b>Time Series Analysis of Sector-wise GDP</b>: A comprehensive analysis on various sectors of GDP in India. Guide: Prof. Kiranmoy Das and Prof. Anil K. Ghosh.</li>
+            <li><b>Local Neighborhood of Sparse Erdős-Rényi Graphs</b>: Studying the d-depth neighborhood of a vertex in large, sparse random graphs. Guide: Prof. Antar Bandyopadhyay.</li>
+            <li><b>Demographic Analysis and Comparative Study of Maharashtra and Manipur using NFHS-5 dataset</b>: A comparative analysis to illuminate the socio-economic dynamics, health indicators, and lifestyle
+patterns that define the populations of these two diverse regions. Key metrics will include income
+and expenditure, education levels, and reproductive health. This study aims to provide insights into
+the disparities and developments that shape Maharashtra and Manipur, offering an understanding of
+India’s multifaceted socio-economic landscape.. Guide: Prof. Kajori Banerjee.</li>
+            <li><b>Reconstructing Signals from Noisy Data</b>: Utilizing moving average estimators for denoising noisy signals to reconstruct the original signal. Guide: Prof. Probal Chaudhari.</li>
+            <li><b>Exploratory Data Analysis of Concrete Strength</b>: Fitted a multivariate regression model, analyzed important/redundant variables, and optimized feature
+sets. Guide: Prof. Kiranmoy Das.</li>
+        </ul>
         </div>
     </main>
 
