--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <main>
         <div class="page-container">
             <h2>Contact</h2>
-            <p>You can reach me via email at: <strong>koustav@email.com</strong> (replace with actual)</p>
+            <p>You can reach me via email at: <strong>koustavchowdhury2003@gmail.com</strong></p>
             <p>Or connect with me on <a href="https://github.com/Koustav-Chowdhury73" target="_blank">GitHub</a> and <a href="https://scholar.google.com" target="_blank">Google Scholar</a>.</p>
         </div>
     </main>
